--- a/index.html
+++ b/index.html
@@ -46,7 +46,23 @@
       "高品質":"masterpiece, best quality",
       "薄暗い":"dim lighting",
       "夕焼け":"sunset",
-      "背景ぼかし":"bokeh background"
+      "背景ぼかし":"bokeh background",
+      ”照れる”:”blush”,
+      ”ショートへア”:”short hair”,
+      ”金髪”:”blonde hair”,
+      ”黒髪”:”black hair”,
+      ”長袖”:”long sleeves”,
+      ””:”holding”,
+      ”ツインテール”:”twintails”,
+      ”白いシャツ”:”white shirt”,
+      ”コマ割り”:”comic”,
+      ”ハート”:”heart”,
+      ””:”hair bow”,
+      ””:”multiple boys”,
+      ”室内”:”indoors”,
+      ”少年たち”:”boys”,
+      ”腕を組む”:” crossed arms”,
+      ”黒いエプロン”:”black apron”
       // ここにどんどんタグ追加可能
     };
 
