--- a/index.html
+++ b/index.html
@@ -50,15 +50,14 @@
       ”照れる”:”blush”,
       ”ショートへア”:”short hair”,
       ”金髪”:”blonde hair”,
-      ”黒髪”:”black hair”,
       ”長袖”:”long sleeves”,
-      ””:”holding”,
+      ”持つ”:”holding”,
       ”ツインテール”:”twintails”,
       ”白いシャツ”:”white shirt”,
       ”コマ割り”:”comic”,
       ”ハート”:”heart”,
-      ””:”hair bow”,
-      ””:”multiple boys”,
+      ”髪にリボン”:”hair bow”,
+      ”複数の男の子”:”multiple boys”,
       ”室内”:”indoors”,
       ”少年たち”:”boys”,
       ”腕を組む”:” crossed arms”,
