--- a/index.html
+++ b/index.html
@@ -61,7 +61,32 @@
       ”室内”:”indoors”,
       ”少年たち”:”boys”,
       ”腕を組む”:” crossed arms”,
-      ”黒いエプロン”:”black apron”
+      ”黒いエプロン”:”black apron”,
+      ”少女”:”girl”,
+      ”ソロ”:”solo”,
+      ”長髪”:”long hair”,
+      ”こちらを見る”:”looking at viewer”,
+      ”頬を染める”:”blush”,
+      ”シンプルな背景”:”simple background”,
+      ”白い背景”:”white background”,
+      ”口を閉じる”:”closed mouth”,
+      ”切り裂く”:”cleavage”,
+      ”座っている”:”sitting”,
+      ”中くらいの胸”:”medium breasts”,
+      ”鎖骨”:”collarbone”,
+      ”黄色い瞳”:”yellow eyes,
+      ”紫色の髪”:”purple hair,
+      ”唇を離す”:”parted lips, 
+      ”俯瞰”:”from above,
+      ”電話”:”phone, 
+      ”携帯電話”:”cellphone,
+      ”スマートフォン”:”smartphone, 
+      ”ピンク色の花”:”pink flower, 
+      ”紫色のドレス”:”purple dress, 
+      ”ハーフアップ”:”half updo”,
+      ”ショール”:”shawl,
+      ”花束を持つ”:”holding bouquet, 
+      ”ピンクの薔薇”:”pink rose”,
       // ここにどんどんタグ追加可能
     };
 
