--- a/index.html
+++ b/index.html
@@ -74,20 +74,33 @@
       ”座っている”:”sitting”,
       ”中くらいの胸”:”medium breasts”,
       ”鎖骨”:”collarbone”,
-      ”黄色い瞳”:”yellow eyes,
-      ”紫色の髪”:”purple hair,
-      ”唇を離す”:”parted lips, 
-      ”俯瞰”:”from above,
-      ”電話”:”phone, 
-      ”携帯電話”:”cellphone,
-      ”スマートフォン”:”smartphone, 
-      ”ピンク色の花”:”pink flower, 
-      ”紫色のドレス”:”purple dress, 
+      ”黄色い瞳”:”yellow eyes”,
+      ”紫色の髪”:”purple hair”,
+      ”唇を離す”:”parted lips”, 
+      ”俯瞰”:”from above”,
+      ”電話”:”phone”, 
+      ”携帯電話”:”cellphone”,
+      ”スマートフォン”:”smartphone”, 
+      ”ピンク色の花”:”pink flower”, 
+      ”紫色のドレス”:”purple dress”, 
       ”ハーフアップ”:”half updo”,
-      ”ショール”:”shawl,
-      ”花束を持つ”:”holding bouquet, 
+      ”ショール”:”shawl”,
+      ”花束を持つ”:”holding bouquet”, 
       ”ピンクの薔薇”:”pink rose”,
-      // ここにどんどんタグ追加可能
+      ”茶髪”:”brown hair”,
+      ”髪飾り”:”hair ornament”,
+      ”緑の瞳”:”green eyes”,
+      ”上半身”:”upper body”, 
+      ”髪に花”:”hair flower”,
+      ”両手を上げる”:”hands up”,
+      ”シンボル型の瞳孔”:”symbol-shaped pupils”, 
+      ”ハート型の瞳孔”:”heart-shaped pupils”,
+      ”赤い花”:”red flower”,
+      ”赤い薔薇”:”red rose”,
+      ”茂み”:”bush”,
+      ”髪を持っている”:”holding paper”,
+      ”目にハート”:”heart in eye”
+    // ここにどんどんタグ追加可能
     };
 
     function convertTags(){
