--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 <body>
   <h1>日本語 → 英語タグ変換</h1>
-  <p class="small">カンマ（,）やスペースで区切って日本語キーワードを入力 → 英語タグ列に変換します。</p>
+  <p class="small">カンマ（,）や点 (、) スペースで区切って日本語キーワードを入力 → 英語タグ列に変換します。</p>
 
   <label>日本語入力（例: 長い髪, 青い瞳, 制服）</label>
-  <textarea id="jpInput" placeholder="長い髪, 青い瞳, 制服"></textarea>
+  <textarea id="jpInput" placeholder="数字や強調は後でつけてね！何色の服とかは後でつけ加えていいかも。"></textarea>
   <div>
     <button onclick="convertTags()">変換する</button>
     <button onclick="clearAll()">クリア</button>
@@ -30,77 +30,157 @@
   <script>
     // 固定辞書（GitHub Pages用）
     const dictionary = {
+      //性別など
       "男":"male",
       "女":"female",
-      "長い髪":"long hair",
+      ”少年”:”boy”,
+      ”少女”:”girl”,
+      ”ソロ”:”solo”,
+      ”カップル”:”couple”,
+      //髪型
       "短い髪":"short hair",
+      "肩までの髪":"medium hair",
+      "長い髪":"long hair",
+      ”パッツン前髪”:”blunt bangs”,
+      ”かきあげ前髪”:”swept up bangs”,
+      ”M字前髪”:”M-shaped bangs”,
+      ”真ん中分け”:”parting in the middle”,
+      ”眉上”:”adove the eyebrows”,
+      ”オールバック”:”all back”,
+      ”目隠れ”:”bangs that reach below the eyes”,
+      ”ボブヘア”:”bob hair”,
+      ”おかっぱ頭”:”bobbed hair”,
+      ”クセ毛”:”curly hair”,
+      ”ボサボサ頭”:”messy hair”,
+      ”ウルフヘア”:”wolf cut hair style”,
+      ”ハーフアップ”:”half updo”,
+      ”三つ編み”:”braid hair”,
+      ”ポニーテール”:”ponytail hair”,
+      ”ツインテール”:”twintails”,
+      //目の色
+      "黒い瞳":"black eyes",
+      "白い瞳":"white eyes",
+      "茶色い瞳":"brown eyes",
       "青い瞳":"blue eyes",
       "赤い瞳":"red eyes",
-      "制服":"school uniform",
-      "笑顔":"smile",
-      "微笑む":"smile softly",
-      "涙":"tears",
-      "猫耳":"cat ears",
+      "黄色い瞳":"yellow eyes",
+      "オレンジ色の瞳":"orange eyes",
+      "緑の瞳":"green eyes",
+      ”紫色の瞳”:”purple eyes”,
+      ”金色の瞳”:”golden eyes”,
+      //髪の色
+      "黒い髪":"black hair",
+      "白い髪":"white hair",
+      "茶色い髪":"brown hair",
+      "青い髪":"blue hair",
+      "赤い髪":"red hair",
+      "黄色い髪":"yellow hair",
+      "オレンジ色の髪":"orange hair",
+      "緑の髪":"green hair",
+      ”紫色の髪”:”purple hair”,
+      ”金髪”:”blonde hair”,
       "黒髪":"black hair",
       "白髪":"white hair",
-      "高品質":"masterpiece, best quality",
-      "薄暗い":"dim lighting",
-      "夕焼け":"sunset",
-      "背景ぼかし":"bokeh background",
-      ”照れる”:”blush”,
-      ”ショートへア”:”short hair”,
-      ”金髪”:”blonde hair”,
+      ”茶髪”:”brown hair”,
+      //服装
+      "制服":"uniform",
+      ”ブレザー”:”blazer uniform”,
+      ”学ラン”:”gakuran”,//ほんと？
+      ”セーラー服”:”sailor suit”,
+      ”スカート”:”skirt”,
+      ”フレアスカート”:”flared skirt”,
+      ”プリーツスカート”:”pleated skirt”,
+      ”ロングスカート”:”long skirt”,
+      ”スラックス”:”slacks”,
+      ”スーツ”:”suit”,
+      ”ワイシャツ”:”shirt”,
+      ”ブラウス”:”blouse”,
+      ”タンクトップ”:”tank top”,
+      ”ホットパンツ”:”hot pants”,
+      ”ショートパンツ”:”short pants”,
+      ”半ズボン”:”shorts”,
+      ”カーゴパンツ”:”cargo pants”,
+      ”チノパン”:”chino pants”,
+      ”ワンピース”:”one piece dress”,
+      ”ドレス”:”dress”,
+      ”チャイナ服”:”cheongsam clothes”,
+      ”ルームウェア”:”room wear”,
+      ”パジャマ”:”pajamas”,
+      ”ノースリーブ”:”sleevele”,
+      ”半袖”:”short sleeves”,
       ”長袖”:”long sleeves”,
+      ”フリル”:”frill”,
+      ”レース”:”lace”,
+      ”タイト”:”tight”,
+      ”黒いエプロン”:”black apron”,
+      ”ショール”:”shawl”,
+      //表情
+      "笑顔":"smile",
+      "微笑む":"smile softly",
+      ”不機嫌”:”bad mood”,
+      ”怒る”:”angry”,
+      ”悲しい”:”sadness”,
+      "涙":"tears",
+      ”楽しい”:”happy”,
+      ”照れる”:”blush”,
+      ”頬を染める”:”blush”,
+      //行動
+      ”こちらを見る”:”looking at viewer”,
       ”持つ”:”holding”,
-      ”ツインテール”:”twintails”,
-      ”白いシャツ”:”white shirt”,
+      ”唇を離す”:”parted lips”, 
+      ”腕を組む”:”crossed arms”,
+      ”口を閉じる”:”closed mouth”,
+      ”切り裂く”:”cleavage”,
+      ”座っている”:”sitting”,
+      ”花束を持つ”:”holding bouquet”,
+      ”両手を上げる”:”hands up”,
+      ”紙を持っている”:”holding paper”,
+      //オプション
+      "猫耳":"cat ears",
+      ”中くらいの胸”:”medium breasts”,
+      ”鎖骨”:”collarbone”,
       ”コマ割り”:”comic”,
       ”ハート”:”heart”,
       ”髪にリボン”:”hair bow”,
       ”複数の男の子”:”multiple boys”,
-      ”室内”:”indoors”,
-      ”少年たち”:”boys”,
-      ”腕を組む”:” crossed arms”,
-      ”黒いエプロン”:”black apron”,
-      ”少女”:”girl”,
-      ”ソロ”:”solo”,
-      ”長髪”:”long hair”,
-      ”こちらを見る”:”looking at viewer”,
-      ”頬を染める”:”blush”,
-      ”シンプルな背景”:”simple background”,
-      ”白い背景”:”white background”,
-      ”口を閉じる”:”closed mouth”,
-      ”切り裂く”:”cleavage”,
-      ”座っている”:”sitting”,
-      ”中くらいの胸”:”medium breasts”,
-      ”鎖骨”:”collarbone”,
-      ”黄色い瞳”:”yellow eyes”,
-      ”紫色の髪”:”purple hair”,
-      ”唇を離す”:”parted lips”, 
-      ”俯瞰”:”from above”,
+      ”複数の女の子”:”multiple girls”,
       ”電話”:”phone”, 
       ”携帯電話”:”cellphone”,
       ”スマートフォン”:”smartphone”, 
-      ”ピンク色の花”:”pink flower”, 
-      ”紫色のドレス”:”purple dress”, 
-      ”ハーフアップ”:”half updo”,
-      ”ショール”:”shawl”,
-      ”花束を持つ”:”holding bouquet”, 
-      ”ピンクの薔薇”:”pink rose”,
-      ”茶髪”:”brown hair”,
+      ”太陽”:”sun”,
+      ”月”:”moon”,
+      ”星”:”star”,
+      ”雲”:”cloud”,
+      ”コイン”:”coin”,
+      ”王冠”:”clown”,
+      ”花”:”flower”, 
+      ”薔薇”:”rose”,
       ”髪飾り”:”hair ornament”,
-      ”緑の瞳”:”green eyes”,
-      ”上半身”:”upper body”, 
       ”髪に花”:”hair flower”,
-      ”両手を上げる”:”hands up”,
       ”シンボル型の瞳孔”:”symbol-shaped pupils”, 
       ”ハート型の瞳孔”:”heart-shaped pupils”,
-      ”赤い花”:”red flower”,
-      ”赤い薔薇”:”red rose”,
+      ”目にハート”:”heart in eye”,
+      //イラストの仕上がり
+      "高品質":"masterpiece, best quality",
+      //背景
+      "薄暗い":"dim lighting",
+      "夕焼け":"sunset",
+      "背景ぼかし":"bokeh background",
+      ”室内”:”indoors”,
+      ”シンプルな背景”:”simple background”,
+      ”白い背景”:”white background”,
       ”茂み”:”bush”,
-      ”髪を持っている”:”holding paper”,
-      ”目にハート”:”heart in eye”
-    // ここにどんどんタグ追加可能
+      //画角
+      ”煽り”:”low angle view”,
+      ”俯瞰”:”from above, bird's eye view”,
+      ”顔のみ”:”close up of face”,
+      ”上半身”:”upper body”,
+      ”全身”:”whole body”,
+      ”空間”:”from a distance”,
+
+      //未分類
+      
+    // 上にどんどんタグ追加する！
     };
 
     function convertTags(){
