--- a/index.html
+++ b/index.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>日本語→英語タグ変換（ののちゃん専用）</title>
+  <meta charset="UTF-8">
+  <title>タグ変換ツール</title>
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Helvetica,Arial;padding:16px;max-width:900px;margin:auto}
-    textarea{width:100%;min-height:120px;padding:8px;margin:8px 0;font-size:16px}
-    button{padding:10px 14px;font-size:15px;margin-right:8px}
-    .result{background:#f6f7fb;padding:10px;border-radius:6px;white-space:pre-wrap;margin-top:12px}
-    label{font-weight:600}
-    .small{font-size:13px;color:#666}
+    body { font-family: sans-serif; padding: 1em; }
+    textarea { width: 100%; height: 100px; }
+    button { margin-top: 1em; padding: 0.5em 1em; }
+    #output { margin-top: 1em; white-space: pre-wrap; }
   </style>
 </head>
 <body>
-  <h1>日本語 → 英語タグ変換</h1>
-  <p class="small">カンマ（,）や点 (、) スペースで区切って日本語キーワードを入力 → 英語タグ列に変換します。</p>
+  <h1>タグ変換ツール</h1>
+  <p>日本語を入力すると、英語タグに変換します。</p>
 
-  <label>日本語入力（例: 長い髪, 青い瞳, 制服）</label>
-  <textarea id="jpInput" placeholder="数字や強調は後でつけてね！何色の服とかは後でつけ加えていいかも。"></textarea>
-  <div>
-    <button onclick="convertTags()">変換する</button>
-    <button onclick="clearAll()">クリア</button>
-    <button onclick="copyResult()">結果をコピー</button>
-  </div>
+  <textarea id="input" placeholder="例: 犬 猫 青空"></textarea><br>
+  <button onclick="convert()">変換する</button>
 
-  <div class="result" id="result">ここに英語タグが表示されます。</div>
+  <div id="output"></div>
 
   <script>
-    // 固定辞書（GitHub Pages用）
-    const dictionary = {
-      //性別など
-      "男":"male",
-      "女":"female",
-      "少年":"boy",
-      "少女":"girl",
+    let tagMap = {};
+
+    // JSONを読み込む
+    fetch("tags.json")
+      .then(response => response.json())
+      .then(data => {
+        tagMap = data;
+      })
+      .catch(err => {
+        console.error("JSON読み込みエラー:", err);
+      });
+
+    function convert() {
+      const input = document.getElementById("input").value.trim();
+      const words = input.split(/\s+/);
+      const result = words.map(word => tagMap[word] || word).join(", ");
+      document.getElementById("output").textContent = result;
+    }
+  </script>
+</body>
+</html>      "少女":"girl",
       "ソロ":"solo",
       "カップル":"couple",
       //髪型
