--- a/index.html
+++ b/index.html
@@ -1,43 +1,56 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
   <title>タグ変換ツール</title>
   <style>
-    body { font-family: sans-serif; padding: 1em; }
+    body { font-family: sans-serif; padding: 1em; max-width: 600px; margin: auto; }
     textarea { width: 100%; height: 100px; }
-    button { margin-top: 1em; padding: 0.5em 1em; }
-    #output { margin-top: 1em; white-space: pre-wrap; }
+    button { margin: 0.5em 0.3em 0 0; padding: 0.5em 1em; }
+    #output { margin-top: 1em; white-space: pre-wrap; background:#f6f7fb; padding:10px; border-radius:6px; }
   </style>
 </head>
 <body>
-  <h1>タグ変換ツール</h1>
-  <p>日本語を入力すると、英語タグに変換します。</p>
+  <h1>日本語 → 英語タグ変換</h1>
+  <p>スペースやカンマで区切って日本語を入力すると英語タグに変換します。</p>
 
-  <textarea id="input" placeholder="例: 犬 猫 青空"></textarea><br>
+  <textarea id="input" placeholder="例: 男 女 猫"></textarea><br>
   <button onclick="convert()">変換する</button>
+  <button onclick="copyResult()">結果をコピー</button>
+  <button onclick="clearAll()">クリア</button>
 
-  <div id="output"></div>
+  <div id="output">ここに英語タグが表示されます。</div>
 
   <script>
     let tagMap = {};
 
     // JSONを読み込む
     fetch("tags.json")
-      .then(response => response.json())
-      .then(data => {
-        tagMap = data;
-      })
-      .catch(err => {
-        console.error("JSON読み込みエラー:", err);
-      });
+      .then(res => res.json())
+      .then(data => { tagMap = data; })
+      .catch(err => { console.error("JSON読み込みエラー:", err); });
 
     function convert() {
       const input = document.getElementById("input").value.trim();
-      const words = input.split(/\s+/);
-      const result = words.map(word => tagMap[word] || word).join(", ");
+      if(!input){ 
+        alert("日本語を入力してください。");
+        return;
+      }
+      const words = input.split(/[\s,、]+/); // 半角・全角スペース、カンマで分割
+      const result = words.map(w => tagMap[w.trim()] || w.trim()).join(", ");
       document.getElementById("output").textContent = result;
+    }
+
+    function copyResult() {
+      const text = document.getElementById("output").textContent;
+      navigator.clipboard.writeText(text)
+        .then(() => alert("コピーしました"))
+        .catch(() => alert("コピーに失敗しました"));
+    }
+
+    function clearAll() {
+      document.getElementById("input").value = "";
+      document.getElementById("output").textContent = "ここに英語タグが表示されます。";
     }
   </script>
 </body>
